--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "ibm_db": "^2.7.0"
+  },
+  "engines": {
+    "node": "10.16.0"
   }
 }
